--- a/index.html
+++ b/index.html
@@ -126,8 +126,39 @@
       </section>
       </div>
       </div>
-  </div>
+  </div> -->
   
+    <section class="page-section" id="services">
+      <div class="container-s3">
+        <div class="text-center">
+          <h2 class="section-heading">Services</h2>
+          <hr class="divider" />
+          <h3 class="section-subheading">Sign up to cook with us</h3>
+        </div>
+        <div class="label-section" id="labels">
+            <label for="fname">Enter your name</label>
+            <input type="name" id="name" size="10" required />
+
+            <label for="email">Enter your email</label>
+            <input type="email" id="email" size="10" required />
+
+            <label for="phone">Enter your phone number</label>
+            <input
+              type="tel"
+              id="phone"
+              size="10"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+              required/>
+            <button class="button" onclick='location.href="Submit"'>
+              Submit
+            </button>
+        </div>
+        <div class="container-image">
+          <img class="container-image2" src="images/photo-1447078806655-40579c2520d6.jpeg"/>
+        </div>
+      </div>
+    </section>
+    
 
    <!--Section 4-->
 
