--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     </div>
 
     <!--Section 2-->
-    <section class="page-section" id="about">
-      <div class="container-s2">
-        <img class="container-image zoom" src="images/photo-1615937657715-bc7b4b7962c1.jpeg"/>
+    <section class="page-section" style="padding: 0;" id="about">
+      <div class="container-s2" style="padding-top: 5rem; padding-bottom: 3rem;">
+        <img class="container-image zoom" src="images/photo-1615937657715-bc7b4b7962c1.jpeg" style="padding: 5rem;"/>
         <div class="s2">
         
           <h2>Our stories</h2>
@@ -92,14 +92,13 @@
     </section>
 
     <!--Section 3-->
-
-    <div class="container-s3">
-      <img class="container-image2 zoom" src="images/photo-1447078806655-40579c2520d6.jpeg"/>
-      <div class="s3"></div>
-        <section class="page-section" id="services">
-            <h2>Services</h2>
-            <hr class="divider" />
-            <h3>Sign up to cook with us</h3>
+    <section class="page-section" style="padding: 0;" id="services">
+      <div class="container-s3" style="padding-top: 5rem; padding-bottom: 3rem;">
+        <img class="container-image2 zoom" src="images/photo-1447078806655-40579c2520d6.jpeg"/>
+        <div class="s3">
+          <h2>Services</h2>
+          <hr class="divider" />
+          <h3>Sign up to cook with us</h3>
           <div class="label">
             <label for="fname">Enter your name</label>
             <input type="name" id="name" size="10" required />
@@ -123,21 +122,23 @@
     </section>
 
     <!--Section 4-->
-
-      <div class="container-s4">
+    
+    <section class="page-section" style="padding:0;" id="contact">
+      <div class="container-s4" style="padding-top: 5rem; padding-bottom: 5rem;">
         <div class="s4">
           <h2>Contact us</h2>
           <hr class="divider"/>
           <h3>1+ (555) 456 7891</h3>
-          <h3>smashingdishes@smashingdishes.com </h3>
-        </section>
+          <h3>smashingdishes@smashingdishes.com </h3> 
+        </div>
       </div>
-    </div>
+    </section>
 
     <!--Gallery-->
 
     <section class="page-section" id="gallery"
-      style="background: linear-gradient(to bottom,rgba(5, 5, 5, 0.5) 0%,rgba(47, 82, 158, 0.9) 100%); padding-bottom: 15rem;">
+      style="background: linear-gradient(to bottom,rgba(5, 5, 5, 0.5) 0%,rgba(47, 82, 158, 0.9) 100%); 
+      padding-bottom: 20rem;">
       <h2>Gallery</h2>
       <hr class="divider"/>
       <h3>Our most famous recipes</h3>
@@ -151,10 +152,10 @@
           </div>
         </div>
         <div class="column">
-          <img src="images/asparagus and jammy egg.jpeg" alt="Avatar"class="image-box"/>
+          <img src="images/spinach & tomato mushroom.webp" alt="Avatar"class="image-box"/>
           <div class="overlay">
-            <a class="text" href="images/asparagus and jammy egg.jpeg">
-              Asparagus with Jammy Egg & Pickle Dressing
+            <a class="text" href="images/spinach & tomato mushroom.webp">
+              Spused Spinach and Tomato-Topped Mushroom 
             </a>
           </div>
         </div>
@@ -167,10 +168,10 @@
           </div>
         </div>
         <div class="column">
-          <img src="images/spinach & tomato mushroom.webp" alt="Avatar"class="image-box"/>
+          <img src="images/asparagus and jammy egg.jpeg" alt="Avatar"class="image-box"/>
           <div class="overlay">
-            <a class="text" href="images/spinach & tomato mushroom.webp">
-              Spused Spinach and Tomato-Topped Mushroom 
+            <a class="text" href="images/asparagus and jammy egg.jpeg">
+              Asparagus with Jammy Egg & Pickle Dressing
             </a>
           </div>
         </div>
