--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
 
     <!--Footer-->
 
-    <footer class="footer">
+    <footer class="footer"
+    style="background: 
+    linear-gradient(to bottom,rgba(5, 5, 5, 0.5) 0%,rgba(47, 82, 158, 0.9) 100%);">
       <div class="container">
         <div class="col-lg-4 text-lg-start">Copyright &#169 Your Website 2022
           <div class="col-lg-4 text-lg-end">
