--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </nav>
 
-    <!--Placeholder-->
+    <!--Section 1-->
 
     <div class="hero">
       <div class="hero-wrapper">
